# sdp-prototype

./: .coveralls.yml  .gitattributes  .gitignore  .gitlab-ci.new.yml  .gitlab-ci.yml  .gitmodules  .pylintrc  LICENSE  LICENSE.md  Makefile  Pipfile  README.md  cucumber.json  readthedocs.yml  requirements.dev.txt  requirements.txt
.gitlab-ci/: docker.build.gitlab-ci.yml  docker.push.gitlab-ci.yml  pytango-9.3.0.gitlab-ci.yml  pytango-orca-dev-0.3.0.gitlab-ci.yml  pytango-orca-dev.gitlab-ci.yml  pytango.gitlab-ci.yml  python.build.gitlab-ci.yml  python.publish.gitlab-ci.yml  reports.gitlab-ci.yml  ska-lmc-base.gitlab-ci.yml  tests.gitlab-ci.yml
.gitlab-ci/templates/: docker-templates.yml
charts/: README.md  etcd-operator.yaml  test.yaml
docker/: README.md  gitlab-ci-templates.yml
docs/: Pipfile  README.md  requirements.txt
examples/: README.md  assign_resources.json  configure.json  docker-compose.yml  docker_run_etcd.sh  example_pb.json
scripts/: .gitlab-ci-common.yml  .pylintrc  README.md  casa_pod.yaml  docker_run_etcd.sh  docker_run_test.sh  run_c_tests.sh  run_test.sh  setup.cfg
src/: README.md  gitlab-ci-templates.yml
src/helm_deploy/: .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  README.md  helm_deploy.py  release.py  requirements.txt  setup.cfg  setup.py
src/helm_deploy/chart-repo/: buffer-0.1.0.tgz  cbf-sdp-emulator-0.1.0.tgz  cbf-sdp-multicast-example-0.1.0.tgz  cbf_sdp_emulator-0.1.0.tgz  daliuge-0.2.1.tgz  dask-0.1.0.tgz  index.yaml  multicast-example-0.1.0.tgz  plasma-pipeline-0.1.0.tgz  plasma_pipeline-0.1.0.tgz  pss-receive-0.1.0.tgz  vis-receive-0.2.1.tgz  workflow-0.1.0.tgz
src/helm_deploy/charts/buffer/: Chart.yaml  values.yaml
src/helm_deploy/charts/buffer/templates/: _helpers.tpl  persistentvolumeclaim.yaml
src/helm_deploy/charts/cbf-sdp-emulator/: Chart.yaml  values.yaml
src/helm_deploy/charts/cbf-sdp-emulator/templates/: send-recv.yaml
src/helm_deploy/charts/cbf-sdp-multicast-example/: Chart.yaml  README.rst  values.yaml
src/helm_deploy/charts/cbf-sdp-multicast-example/templates/: send-recv.yaml
src/helm_deploy/charts/cbf-sdp-simple-pair-example/templates/: send-recv.yaml
src/helm_deploy/charts/cbf_sdp_emulator/: Chart.yaml
src/helm_deploy/charts/daliuge/: Chart.yaml  values.yaml
src/helm_deploy/charts/daliuge/templates/: _helpers.tpl
src/helm_deploy/charts/dask/: Chart.yaml  values.yaml
src/helm_deploy/charts/dask/templates/: NOTES.txt  dask-scheduler-deployment.yaml  dask-worker-deployment.yaml
src/helm_deploy/charts/plasma-pipeline/: Chart.yaml  values.yaml
src/helm_deploy/charts/plasma-pipeline/templates/: _helpers.tpl  send-recv-plasma.yaml
src/helm_deploy/charts/pss-receive/: Chart.yaml  values.yaml
src/helm_deploy/charts/pss-receive/templates/: deploy-receiver.yaml
src/helm_deploy/charts/vis-receive/: Chart.yaml  values.yaml
src/helm_deploy/charts/workflow/: Chart.yaml  values.yaml
src/helm_deploy/charts/workflow/templates/: _helpers.tpl  workflow.yaml
src/helm_deploy/test/: deploy_test.py
src/lmc/: .gitlab-ci.yml  .pylintrc  Dockerfile  Makefile  README.md  README.pypi.md  README.subarray.md  coverage.xml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py
src/lmc/pogo/: SDPSubarray.xmi
src/lmc/ska_sdp_lmc/: __init__.py  attributes.py  base.py  feature_toggle.py  master.py  release.py  subarray.py  subarray_config.py  tango_logging.py  util.py  workflows.py
src/lmc/ska_sdp_lmc/schema/: scan.json
src/lmc/tests/: __init__.py  conftest.py  test_master.py  test_subarray.py
src/lmc/tests/data/: attr_receiveAddresses-cbfOutputLink-disabled.json  command_AssignResources.json  command_AssignResources_invalid.json  command_Configure.json  command_Configure_invalid.json  receive_addresses_output.json
src/lmc/tests/features/: master.feature  subarray.feature
src/logging/: .gitlab-ci.yml  .pylintrc  README.md  setup.cfg  setup.py
src/logging/ska_sdp_logging/: __init__.py  core_logging.py  tango_logging.py
src/logging/test/: core_test.py  tango_test.py
src/processing_controller/: .gitlab-ci.yml  Dockerfile  Makefile  README.md  processing_controller.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  workflows.json  workflows_schema.json
src/processing_controller/processing_controller/: __init__.py  __main__.py  processing_controller.py  workflows.py
src/processing_controller/processing_controller/schema/: workflows.json
src/processing_controller/test/: controller_test.py  processing_block_test.py  workflows_test.py
src/processing_controller/test/data/: workflows.json
src/tango_sdp_master/: .gitlab-ci.yml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  README.pypi.md  README.rst  conftest.py  pytest.ini  requirements.txt  setup.cfg  setup.py
src/tango_sdp_master/.eggs/: pytest_runner-5.1-py3.5.egg  recommonmark-0.5.0-py3.5.egg
src/tango_sdp_master/.eggs/Sphinx-2.1.2-py3.5.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  requires.txt
src/tango_sdp_master/SDPMaster/: SDPMaster.py  SDPMaster.xmi  __init__.py  __main__.py  conftest.py  register.py  release.py
src/tango_sdp_master/SDPMaster/SDPMaster/: SDPMaster.py  __init__.py  __main__.py
src/tango_sdp_master/SDPMaster/tangods_sdpmaster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tango_sdp_master/SDPMaster/test/: SDPMaster_test.py
src/tango_sdp_master/test/: SDPMaster_test.py  __init__.py  conftest.py
src/vis_receive/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  send.py
src/vis_receive/casa/: Dockerfile  check_ms.py
src/vis_receive/cmake/modules/: Coveralls.cmake  CoverallsGenerateGcov.cmake  FindCasaCore.cmake  FindOSKAR_MS.cmake
src/vis_receive/sender/: send.py
src/vis_receive/src/: buffer.c  buffer.h  log.c  log.h  main.c  receiver.c  receiver.h  stream.c  stream.h  ureceiver.c  ureceiver.h  ustream.c  ustream.h  write_ms_access.c  write_ms_access.h
src/vis_receive/tests/: CMakeLists.txt  Tests.cpp
src/vis_receive/workflow-test-vis-receive/: Dockerfile  test_vis_receive.py
tools/: run_tests.sh  testing_requirements.txt
(+412 files in other folders)
