[metadata]
description-file = README.md

[aliases]
test = pytest

[run]
branch = True
source = .
omit =
    */__main__.py
    */__init__.py

[tool:pytest]
junit_family=legacy
addopts = -vv
          --capture=no
          --cov=helm_deploy
          --cov-config=setup.cfg
          --cov-report=term
          --cov-report=html
          --cov-report=xml
          --no-cov-on-fail
          --cov-append
          --cov-branch
          --json-report
          --json-report-file=htmlcov/report.json
          --junitxml=build/reports/unit-tests.xml

[report]
skip_covered = False
sort = Cover
