[metadata]
name = ska-sdp-lmc
version = attr: ska_sdp_lmc.release.VERSION
description = SKA SDP Local Monitoring and Control (Tango devices)
author = attr: ska_sdp_lmc.release.AUTHOR
license = attr:ska_sdp_lmc.release.LICENSE
long_description = file: README.pypi.md
long_description_content_type = text/markdown
url = https://gitlab.com/ska-telescope/sdp-prototype/src/lmc
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License

[options]
packages = ska_sdp_lmc
zip_safe = False
setup_requires = pytest-runner
install_requires =
    jsonschema
    pytango
    ska-sdp-config>=0.0.8
    ska-sdp-logging>=0.0.6
tests_require =
    pylint2junit
    pytest
    pytest-bdd
    pytest-cov
    pytest-json-report
    pytest-pycodestyle
    pytest-pydocstyle
    pytest-pylint

[options.package_data]
ska_sdp_lmc = schema/*.json

[options.entry_points]
console_scripts =
    SDPMaster = ska_sdp_lmc.master:main
    SDPSubarray = ska_sdp_lmc.subarray:main

[aliases]
test = pytest

[run]
branch = True
omit =
    */__main__.py
    */__init__.py
    */release.py

[pytest]
addopts =
    -vv
    --pylint
    --pycodestyle
    --pydocstyle
    --gherkin-terminal-reporter
    --cov=ska_sdp_lmc
    --cov-config=./setup.cfg
    --cov-report=term
    --cov-report=html
    --cov-report=xml
    --no-cov-on-fail
    --cov-append
    --cov-branch
    --json-report
    --json-report-file=htmlcov/report.json
    --junitxml=build/reports/unit-tests.xml
    --cucumber-json=cucumber.json

[report]
skip_covered = False
sort = Cover
