[metadata]
description-file = README.md

[aliases]
test = pytest

[run]
branch = True
omit =
    */__main__.py
    */__init__.py
    */release.py

[pytest]
addopts = --pylint
          --pycodestyle
          --pydocstyle
          -vv
          --gherkin-terminal-reporter
          --gherkin-terminal-reporter-expanded
          --cov=ska_sdp_lmc
          --cov-config=./setup.cfg
          --cov-report=term
          --cov-report=html
          --no-cov-on-fail
          --cov-append
          --cov-branch
          --junitxml=unit-tests.xml
          --cucumber-json=cucumber.json

[report]
skip_covered = False
sort = Cover
