[metadata]
description-file = README.md

[aliases]
test = pytest

[run]
branch = True
source = processing_controller
omit =
    */__main__.py
    */__init__.py

[tool:pytest]
junit_family=legacy
addopts = -vv
          --capture=no
          --cov=processing_controller
          --cov-config=setup.cfg
          --cov-report=term
          --cov-report=html
          --no-cov-on-fail
          --cov-append
          --cov-branch
          --junitxml=unit-tests.xml

[report]
skip_covered = False
sort = Cover
