[metadata]
description-file = README.md

[aliases]
test = pytest

[run]
branch = True
omit =
    */__main__.py
    */__init__.py
    */release.py

[pytest]
addopts = --pylint
          --codestyle
          --docstyle
          -vv
          --gherkin-terminal-reporter
          --cov=SDPMaster
          --cov-config=./setup.cfg
          --cov-report=term

[report]
skip_covered = False
sort = Cover
